--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,10 +1,10 @@
 Package: sybil
 Type: Package
 Title: sybil - Efficient Constrained Based Modelling in R
-Version: 1.2.10
+Version: 1.3.0
 Date: 2015-03-30
-Authors@R: c(person("Gabriel", "Gelius-Dietrich", role = c("aut", "cre"), email = "geliudie@uni-duesseldorf.de"),
-             person(c("C.", "Jonathan"), "Fritzemeier", role = c("ctb", "cre")),
+Authors@R: c(person("Gabriel", "Gelius-Dietrich", role = c("aut")),
+             person(c("C.", "Jonathan"), "Fritzemeier", role = c("ctb", "cre"), email = "clausjonathan.fritzemeier@uni-duesseldorf.de"),
              person("Rajen", "Piernikarczyk", role = "ctb"),
              person(c("Marc", "Andre"), "Daxer", role = "ctb"),
              person("Benjamin", "Braasch", role = "ctb"),
