--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,8 +1,8 @@
 Package: sybil
 Type: Package
 Title: Efficient Constrained Based Modelling in R
-Version: 1.3.1
-Date: 2015-06-17
+Version: 1.3.2
+Date: 2015-10-19
 Authors@R: c(
 	     person(c("C.", "Jonathan"), "Fritzemeier", role = c("cre", "ctb"), email = "clausjonathan.fritzemeier@uni-duesseldorf.de"),
 	     person("Gabriel", "Gelius-Dietrich", role = c("aut")),
@@ -48,9 +48,11 @@ Collate: generics.R validmodelorg.R validoptsol.R validreactId.R
         optsol_optimizeProbClass.R optsol_fluxVarClass.R
         optsol_fluxdelClass.R optsol_robAnaClass.R optsol_phppClass.R
         optsol_genedelClass.R checksolClass.R summaryOptsolClass.R
-        sysBiolAlgClass.R sysBiolAlg_fbaClass.R sysBiolAlg_fvClass.R
+        sysBiolAlgClass.R sysBiolAlg_fbaClass.R
+        sysBiolAlg_fbaEasyConstraintClass.R sysBiolAlg_fvClass.R
         sysBiolAlg_lmomaClass.R sysBiolAlg_momaClass.R
-        sysBiolAlg_mtfClass.R sysBiolAlg_roomClass.R sybilLogClass.R
+        sysBiolAlg_mtfClass.R sysBiolAlg_mtfEasyConstraintClass.R
+        sysBiolAlg_roomClass.R sybilLogClass.R
 Packaged: 2014-11-19 20:39:37 UTC; gabriel
 Author: C. Jonathan Fritzemeier [cre, ctb],
   Gabriel Gelius-Dietrich [aut],
