updated documentation for version modelorg

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -7,6 +7,7 @@ import(lattice)
 importFrom("grDevices", "colorRampPalette", "grey")
 importFrom("graphics", "arrows", "hist", "points", "polygon", "segments")
 importFrom("utils", "combn", "edit", "read.table", "str", "write.table")
+importFrom("utils", "compareVersion")
 
 exportPattern("^[^\\.]")
 
