--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -4,7 +4,8 @@ Title: Efficient Constrained Based Modelling
 Version: 2.2.1
 Date: 2022-08-15
 Authors@R: c(
-         person("Mayo", "Roettger", role = c("cre"), email = "mayo.roettger@hhu.de"),
+         person("Mihail", "Anton", role = "cre", email = "mihail.anton@chalmers.se"),
+             person("Mayo", "Roettger", role = c("ctb"), email = "mayo.roettger@hhu.de"),
 	     person("Gabriel", "Gelius-Dietrich", role = "aut"),
              person(c("C.", "Jonathan"), "Fritzemeier", role = "ctb", email = "clausjonathan.fritzemeier@uni-duesseldorf.de"),
              person("Rajen", "Piernikarczyk", role = "ctb"),
@@ -56,8 +57,9 @@ Collate: generics.R validmodelorg.R validoptsol.R validreactId.R validreact.R
         sysBiolAlg_mtfClass.R sysBiolAlg_mtfEasyConstraintClass.R
         sysBiolAlg_roomClass.R sybilLogClass.R upgradeModelorg.R
         mergeReact2Modelorg.R
-Packaged: 2022-08-15 10:53:00 UTC; mayo
-Author: Mayo Roettger [cre],
+Packaged: 2022-08-15 13:14:00 UTC; mayo
+Author: Mihail Anton [cre],
+  Mayo Roettger [ctb],
   Gabriel Gelius-Dietrich [aut],
   C. Jonathan Fritzemeier [ctb],
   Rajen Piernikarczyk [ctb],
