--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -16,7 +16,8 @@ Authors@R: c(
 Maintainer: Mihail Anton <mihail.anton@chalmers.se>
 Depends: R (>= 3.2.0), Matrix, lattice
 Imports: methods
-Suggests: glpkAPI (>= 1.2.8), lpSolveAPI (>= 5.5.2.0), parallel, grid
+Suggests: glpkAPI (>= 1.2.8), cplexAPI (>= 1.2.4), clpAPI (>= 1.2.4),
+          lpSolveAPI (>= 5.5.2.0), parallel, grid
 URL:
         https://www.cs.hhu.de/lehrstuehle-und-arbeitsgruppen/computational-cell-biology/software-contributions/sybil
 Description: This Systems Biology Package (Gelius-Dietrich et. al. (2012) <doi:10.1186/1752-0509-7-125>) implements algorithms for constraint based analyses of metabolic networks, e.g. flux-balance analysis (FBA), minimization of metabolic adjustment (MOMA), regulatory on/off minimization (ROOM), robustness analysis and flux variability analysis. The package is easily extendable for additional algorithms. Most of the current LP/MILP solvers are supported via additional packages.
